test/testdata/classes/init/missing_1_arg_error.lox
class Foo {
  init(a, b) {
    print a + b;
  }
}

Foo(1); // error: Foo() missing 1 argument: b
